kubernetes/apps/default/tsgateway/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsgateway-reverse-proxy
  labels:
    app: tsgateway-reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsgateway-reverse-proxy
  template:
    metadata:
      labels:
        app: tsgateway-reverse-proxy
        category: reverse-proxy
    spec:
      containers:
        - name: tsgateway-reverse-proxy
          image: nginx:1.23.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 50Mi
          volumeMounts:
            - name: tsgateway-configmap-vol
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: tsgateway-configmap-vol
              mountPath: /etc/nginx/conf.d/app.conf
              subPath: app.conf
              readOnly: true
      volumes:
        - configMap:
            name: tsgateway-configmap
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: app.conf
                path: app.conf
          name: tsgateway-configmap-vol
