kubernetes/apps/default/tsgateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tsgateway-reverse-proxy
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: tsgateway-reverse-proxy
    category: reverse-proxy
