kubernetes/apps/default/tsgateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsgateway-reverse-proxy
  annotations:
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  rules:
    - host: tsgateway.viange.eu
      http:
        paths:
          - path: /
            backend:
              service:
                name: tsgateway-reverse-proxy
                port:
                  number: 80
            pathType: Prefix
